Details
-
Bug
-
Resolution: Fixed
-
Major
-
None
-
None
Description
Offending lines:
err:(dll/directx/wine/wined3d/palette.c:88) Failed to set DIB color table.
|
--- about 3000000000000 times the same line ---
|
err:(dll/directx/wine/wined3d/palette.c:88) Failed to set DIB color table.
|
[SYSREG] Test seems to be stuck in an endless loop, canceled!
|
Attachments
Issue Links
- blocks
-
CORE-13821 AHK: "Wine Test > zz_lbreakout2_2.4.1 > 2.local_game" hangs (the suite), since r75847
-
- Resolved
-