[WINED3D] Silence a noisy DPRINT that makes Test KVM AHK abort. CORE-13829

svn path=/trunk/; revision=75965