reactos/dll/directx/wine/wined3d/palette.c
@@ -85,7 +85,15 @@ HRESULT CDECL wined3d_palette_get_entries(const struct wined3d_palette *palette,
 void CDECL wined3d_palette_apply_to_dc(const struct wined3d_palette *palette, HDC dc)
 {
     if (SetDIBColorTable(dc, 0, 256, palette->colors) != 256)
+#ifdef __REACTOS__
+    {
+        static int warn_once;
+        if (!warn_once++)
+            ERR("Failed to set DIB color table. (Only printing once)\n");
+    }
+#else
         ERR("Failed to set DIB color table.\n");
+#endif
 }
 
 HRESULT CDECL wined3d_palette_set_entries(struct wined3d_palette *palette,
